force-app/main/default/objects/Campaign_Flex_Field__c/Campaign_Flex_Field__c.object-meta.xml
<CustomObject>
   <description>Custom Object to story Campaign Flex Fields data.</description>
   <label>Campaign Flex Field</label>
   <nameField>
      <label>Campaign Flex Field Name</label>
      <type>Text</type>
   </nameField>
   <pluralLabel>Campaign Flex Fields</pluralLabel>
   <sharingModel>ControlledByParent</sharingModel>
</CustomObject>