force-app/main/default/objects/Campaign_Flex_Field__c/fields/CampaignCodeSequence__c.field-meta.xml
<CustomField>
    <fullName>CampaignCodeSequence__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Campaign Code and Sequence Number i.e BP1740401</description>
    <externalId>true</externalId>
    <label>Campaign Code and Sequence</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>