force-app/main/default/objects/Campaign_Flex_Field__c/fields/FlexFieldName__c.field-meta.xml
<CustomField>
    <fullName>FlexFieldName__c</fullName>
    <complianceGroup>Integrity_Uncontrolled;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The name of the flex field to be displayed in  Lead related list.</description>
    <label>FlexFieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>